@@ -14,42 +14,52 @@ import greencity.dto.socialnetwork.SocialNetworkVO;
 import greencity.dto.user.CreateGreenCityUserDto;
 import greencity.dto.user.GreenCityUserProfileDtoResponse;
 import greencity.dto.user.UpdateUserCredoDto;
+import greencity.dto.user.UserActivationDto;
 import greencity.dto.user.UserAddRatingDto;
+import greencity.dto.user.UserAddRatingExternalDto;
 import greencity.dto.user.UserCityDto;
+import greencity.dto.user.GreenCityUserInfoDto;
+import greencity.dto.user.UserDeactivationReasonDto;
 import greencity.dto.user.UserFilterDto;
 import greencity.dto.user.UserManagementVO;
 import greencity.dto.user.UserProfileDtoRequest;
 import greencity.dto.user.UserRoleDto;
-import greencity.dto.user.UserStatusDto;
 import greencity.dto.user.UserVO;
 import greencity.dto.user.UserVOAdvancedDto;
 import greencity.entity.User;
+import greencity.entity.UserDeactivationReason;
 import greencity.entity.UserLocation;
 import greencity.enums.EmailPreference;
 import greencity.enums.EmailPreferencePeriodicity;
 import greencity.enums.Role;
 import greencity.enums.UserStatus;
-import greencity.exception.exceptions.BadUpdateRequestException;
+import greencity.exception.exceptions.ForbiddenException;
 import greencity.exception.exceptions.InsufficientLocationDataException;
-import greencity.exception.exceptions.LowRoleLevelException;
 import greencity.exception.exceptions.NotFoundException;
 import greencity.exception.exceptions.UserAlreadyExistsException;
+import greencity.exception.exceptions.UserStatusUpdateException;
 import greencity.exception.exceptions.WrongEmailException;
 import greencity.exception.exceptions.WrongIdException;
+import greencity.filters.SearchCriteria;
+import greencity.filters.UserSpecification;
 import greencity.mapping.UserManagementVOMapper;
+import greencity.repository.UserDeactivationRepo;
 import greencity.repository.UserLocationRepo;
 import greencity.repository.UserRepo;
-import greencity.repository.options.UserFilter;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.function.Consumer;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -57,6 +67,7 @@ import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.StringUtils;
 
 @Slf4j
 @Service
@@ -69,9 +80,7 @@ public class UserServiceImpl implements UserService {
     private final UserRemoteClient userRemoteClient;
     private final UserLocationRepo userLocationRepo;
     private final GoogleApiService googleApiService;
-
-    @Value("300000")
-    private long timeAfterLastActivity;
+    private final UserDeactivationRepo userDeactivationRepo;
 
     /**
      * {@inheritDoc}
@@ -88,27 +97,9 @@ public class UserServiceImpl implements UserService {
      */
     @Override
     public UserVO findNotDeactivatedByEmail(String email) {
-        return userRemoteClient.findNotDeactivatedByEmail(email)
+        User user = userRepo.findNotDeactivatedByEmail(email)
             .orElseThrow(() -> new WrongEmailException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public UserStatusDto updateStatus(Long id, UserStatus userStatus, Long currentUserId) {
-        checkUpdatableUser(id, currentUserId);
-        accessForUpdateUserStatus(id, currentUserId);
-        UserVO userVO = findById(id);
-        userVO.setUserStatus(userStatus);
-
-        UserStatusDto userStatusDto = UserStatusDto.builder()
-            .id(id)
-            .userStatus(userStatus)
-            .build();
-
-        userRemoteClient.updateUserStatus(userStatusDto);
-        return modelMapper.map(userVO, UserStatusDto.class);
+        return modelMapper.map(user, UserVO.class);
     }
 
     /**
@@ -124,36 +115,6 @@ public class UserServiceImpl implements UserService {
         Map<String, String> body = Map.of("role", role.name());
         return userRemoteClient.updateUserRole(id, body)
             .orElseThrow(() -> new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + id));
-    }
-
-    /**
-     * Method which check that, if admin/moderator update role/status of himself,
-     * then throw exception.
-     *
-     * @param id            id of updatable user.
-     * @param currentUserId id of current user.
-     */
-    protected void checkUpdatableUser(Long id, Long currentUserId) {
-        if (id.equals(currentUserId)) {
-            throw new BadUpdateRequestException(ErrorMessage.USER_CANT_UPDATE_HIMSELF);
-        }
-    }
-
-    /**
-     * Method which check that, if moderator trying update status of admins or
-     * moderators, then throw exception.
-     *
-     * @param id            id of updatable user.
-     * @param currentUserId email of current user.
-     */
-    private void accessForUpdateUserStatus(Long id, Long currentUserId) {
-        UserVO user = findById(currentUserId);
-        if (user.getRole() == Role.ROLE_MODERATOR) {
-            Role role = findById(id).getRole();
-            if ((role == Role.ROLE_MODERATOR) || (role == Role.ROLE_ADMIN)) {
-                throw new LowRoleLevelException(ErrorMessage.IMPOSSIBLE_UPDATE_USER_STATUS);
-            }
-        }
     }
 
     /**
@@ -211,7 +172,7 @@ public class UserServiceImpl implements UserService {
         var userFilterDto = createUserFilterDto(request.getQuery(), request.getRole(), request.getStatus());
         pageable = applyDefaultSorting(pageable);
 
-        Page<User> users = userRepo.findAll(new UserFilter(userFilterDto), pageable);
+        Page<User> users = userRepo.findAll(buildSpecification(userFilterDto), pageable);
         Page<UserManagementVO> userManagementVOs = userManagementVOMapper.mapAllToPage(users);
 
         var pageInfo = getPageInfo(pageable, userManagementVOs);
@@ -231,16 +192,6 @@ public class UserServiceImpl implements UserService {
             throw new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
         }
         userRepo.updateUserRating(userId, rating);
-    }
-
-    private UserFilterDto createUserFilterDto(String criteria, String role, String status) {
-        if (status != null) {
-            status = status.equals("all") ? null : status;
-        }
-        if (role != null) {
-            role = role.equals("all") ? null : role;
-        }
-        return new UserFilterDto(criteria, role, status);
     }
 
     /**
@@ -275,6 +226,16 @@ public class UserServiceImpl implements UserService {
      * {@inheritDoc}
      */
     @Override
+    public List<Long> getAllUserFriendsIds(String email) {
+        User user = userRepo.findByEmail(email)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
+        return userRepo.getAllUserFriendsIds(user.getId());
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
     public PageableAdvancedDto<Long> getAllUserFriendsIds(Long userId, Pageable pageable) {
         if (!userRepo.existsById(userId)) {
             throw new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
@@ -298,11 +259,31 @@ public class UserServiceImpl implements UserService {
      * {@inheritDoc}
      */
     @Override
+    public PageableAdvancedDto<Long> getAllUserFriendsIds(String email, Pageable pageable) {
+        User user = userRepo.findByEmail(email)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
+        return getAllUserFriendsIds(user.getId(), pageable);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
     public List<Long> getSixFriendsIdsWithTheHighestRating(Long userId) {
         if (!userRepo.existsById(userId)) {
             throw new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
         }
         return userRepo.getSixFriendsIdsWithTheHighestRating(userId);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public List<Long> getSixFriendsIdsWithTheHighestRating(String email) {
+        User user = userRepo.findByEmail(email)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
+        return userRepo.getSixFriendsIdsWithTheHighestRating(user.getId());
     }
 
     /**
@@ -372,6 +353,16 @@ public class UserServiceImpl implements UserService {
      * {@inheritDoc}
      */
     @Override
+    public void setLocationForUser(String email, UserProfileDtoRequest userProfileDtoRequest) {
+        User user = userRepo.findByEmail(email)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
+        setLocationForUser(user.getId(), userProfileDtoRequest);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
     public Double findUserRating(Long userId) {
         if (!userRepo.existsById(userId)) {
             throw new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
@@ -393,8 +384,30 @@ public class UserServiceImpl implements UserService {
      * {@inheritDoc}
      */
     @Override
+    public void increaseUserRating(UserAddRatingExternalDto userAddRatingDto) {
+        String email = userAddRatingDto.getEmail();
+        User user = userRepo.findByEmail(email)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
+        user.setRating(user.getRating() + userAddRatingDto.getRating());
+        userRepo.save(user);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
     public UserCityDto findAllUsersCities(Long userId) {
         return findUserLocation(userId, UserCityDto.class);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public UserCityDto findAllUsersCities(String email) {
+        User user = userRepo.findByEmail(email)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
+        return findUserLocation(user.getId(), UserCityDto.class);
     }
 
     /**
@@ -409,8 +422,321 @@ public class UserServiceImpl implements UserService {
      * {@inheritDoc}
      */
     @Override
+    public UserLocationDto findUserLocationDtoByEmail(String email) {
+        User user = userRepo.findByEmail(email)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
+        return findUserLocation(user.getId(), UserLocationDto.class);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
     public void updateUserCredo(UpdateUserCredoDto updateUserCredoDto) {
         userRepo.updateUserCredo(updateUserCredoDto.userId(), updateUserCredoDto.userCredo());
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public UserVOAdvancedDto findByIdAdvanced(Long id) {
+        return userRepo.findById(id)
+            .map(user -> modelMapper.map(user, UserVOAdvancedDto.class))
+            .orElseThrow(() -> new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + id));
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public String getSocialNetworkUrlByName(List<SocialNetworkVO> socialNetworks, String socialNetworkName) {
+        return socialNetworks.stream()
+            .map(SocialNetworkVO::getUrl)
+            .filter(url -> url.contains(socialNetworkName))
+            .findFirst()
+            .orElse(null);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public Boolean createUser(CreateGreenCityUserDto createUserDto) {
+        Long newUserId = createUserDto.getId();
+        if (userRepo.existsById(newUserId)) {
+            throw new UserAlreadyExistsException(HttpStatus.CONFLICT,
+                ErrorMessage.USER_ALREADY_REGISTERED_WITH_THIS_ID.formatted(newUserId));
+        }
+        String newUserEmail = createUserDto.getEmail();
+        if (userRepo.existsByEmail(newUserEmail)) {
+            throw new UserAlreadyExistsException(HttpStatus.CONFLICT,
+                ErrorMessage.USER_ALREADY_REGISTERED_WITH_THIS_EMAIL.formatted(newUserEmail));
+        }
+
+        User userToSave = User.builder()
+            .id(newUserId)
+            .name(createUserDto.getName())
+            .email(newUserEmail)
+            .profilePicturePath(createUserDto.getProfilePicturePath())
+            .rating(AppConstant.DEFAULT_RATING)
+            .eventOrganizerRating(AppConstant.DEFAULT_RATING)
+            .status(UserStatus.ACTIVATED)
+            .build();
+        userRepo.save(userToSave);
+        return true;
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public void updateUserProfilePicture(String email, String profilePicturePath) {
+        int updatedRows = userRepo.updateUserProfilePictureByEmail(email, profilePicturePath);
+        if (updatedRows == 0) {
+            throw new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email);
+        }
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public void updateUserName(Long userId, String userName) {
+        int updatedRows = userRepo.updateUserName(userId, userName);
+        if (updatedRows == 0) {
+            throw new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
+        }
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public void updateUserName(String email, String userName) {
+        User user = userRepo.findByEmail(email)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
+        userRepo.updateUserName(user.getId(), userName);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public void updateUserEmail(String oldEmail, String newEmail) {
+        User user = userRepo.findByEmail(oldEmail)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + oldEmail));
+        boolean userWithNewEmailExists = userRepo.existsByEmail(newEmail);
+        if (userWithNewEmailExists) {
+            throw new UserAlreadyExistsException(HttpStatus.CONFLICT,
+                ErrorMessage.USER_ALREADY_REGISTERED_WITH_THIS_EMAIL.formatted(newEmail));
+        }
+        userRepo.updateUserEmail(user.getId(), newEmail);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public List<GreenCityUserProfileDtoResponse> findGreenCityUserProfilesByUserIds(List<Long> userIds) {
+        var greenCityProfiles = userRepo.findGreenCityUserProfilesByUserIds(userIds);
+
+        int expectedSize = userIds.size();
+        int resultSize = greenCityProfiles.size();
+
+        if (resultSize < expectedSize) {
+            List<Long> resultIds = greenCityProfiles.stream()
+                .map(GreenCityUserProfileDtoResponse::getUserId)
+                .toList();
+            List<Long> notFoundIds = userIds.stream()
+                .filter(userId -> !resultIds.contains(userId))
+                .toList();
+            String notFoundIdsStr = notFoundIds.stream().map(String::valueOf).collect(Collectors.joining(", "));
+            throw new NotFoundException(ErrorMessage.USERS_NOT_FOUND_BY_IDS + notFoundIdsStr);
+        }
+
+        greenCityProfiles.forEach(greenCityProfile -> userLocationRepo.findAllUsersCities(greenCityProfile.getUserId())
+            .ifPresent(userLocation -> {
+                UserLocationDto userLocationDto = modelMapper.map(userLocation, UserLocationDto.class);
+                greenCityProfile.setUserLocationDto(userLocationDto);
+            }));
+        return greenCityProfiles;
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public List<GreenCityUserProfileDtoResponse> findGreenCityUserProfilesByEmails(List<String> emails) {
+        List<Long> userIds = userRepo.getUserIdsByEmails(emails);
+        return findGreenCityUserProfilesByUserIds(userIds);
+    }
+
+    private <T> T findUserLocation(Long userId, Class<T> clazz) {
+        if (!userRepo.existsById(userId)) {
+            throw new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
+        }
+        UserLocation userLocation = userLocationRepo.findAllUsersCities(userId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_DID_NOT_SET_ANY_CITY));
+        return modelMapper.map(userLocation, clazz);
+    }
+
+    @Override
+    public void fillGreenCityInfoInUsers(List<? extends UserManagementVO> users) {
+        List<String> emails = users.stream()
+            .filter(Objects::nonNull)
+            .map(UserManagementVO::getEmail)
+            .toList();
+        Map<String, GreenCityUserInfoDto> usersInfo = userRepo.findGreenCityUserInfoDtosByEmails(emails).stream()
+            .collect(Collectors.toMap(
+                GreenCityUserInfoDto::userEmail,
+                Function.identity()));
+        users.stream()
+            .filter(Objects::nonNull)
+            .forEach(user -> {
+                GreenCityUserInfoDto userInfo = usersInfo.get(user.getEmail());
+                if (userInfo != null) {
+                    user.setId(userInfo.userId());
+                    user.setProfilePicturePath(userInfo.profilePicturePath());
+                    user.setUserCredo(userInfo.userCredo());
+                    user.setStatus(userInfo.status());
+                    user.setRating(userInfo.rating());
+                }
+            });
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public UserStatus getUserStatusByEmail(String email) {
+        User user = userRepo.findByEmail(email)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
+        return user.getStatus();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Transactional
+    @Override
+    public void deleteUserByEmail(String email) {
+        User user = userRepo.findByEmail(email)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
+
+        if (user.getStatus() == UserStatus.DEACTIVATED
+            || user.getStatus() == UserStatus.BLOCKED) {
+            throw new ForbiddenException(ErrorMessage.FORBIDDEN_USER_DELETION);
+        }
+
+        user.setStatus(UserStatus.DELETED);
+        userRepo.save(user);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public List<Long> findAllActivatedUserIds(List<Long> ids) {
+        return userRepo.findAllActivatedUserIdsFromList(ids);
+    }
+
+    /**
+     * Counts all users by user {@link UserStatus}.
+     *
+     * @return amount of user with given {@link UserStatus}.
+     */
+    @Override
+    public long countAllByStatus(UserStatus userStatus) {
+        return userRepo.countAllByStatus(userStatus);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Transactional
+    @Override
+    public List<Long> deactivateAllUsers(List<Long> listId, UserVO currentUser) {
+        listId.forEach(id -> {
+            String reason = createDeactivationReason(currentUser);
+            deactivateUserByIdWithReasons(currentUser, id, List.of(reason));
+        });
+        return listId;
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    @Transactional
+    public void updateUserStatusById(UserVO currentUser, Long targetUserId, UserStatus status) {
+        RequestedAndTargetUsersPair users = isOperationAllowed(currentUser, targetUserId, status);
+        UserVO currentUserDto = users.currentUserDto();
+        User targetUser = users.targetUser();
+
+        if (status == UserStatus.DEACTIVATED) {
+            String reason = createDeactivationReason(currentUserDto);
+            saveDeactivationReason(targetUser, reason);
+            sendDeactivationNotification(targetUser, reason);
+        } else if (status == UserStatus.ACTIVATED) {
+            String lang = userRemoteClient.findUserLanguageByEmail(targetUser.getEmail());
+            UserActivationDto notification = UserActivationDto.builder()
+                .email(targetUser.getEmail())
+                .name(targetUser.getName())
+                .lang(lang)
+                .build();
+            userRemoteClient.sendMessageOfActivation(notification);
+        }
+
+        targetUser.setStatus(status);
+        userRepo.save(targetUser);
+    }
+
+    @Override
+    public void deactivateUserByIdWithReasons(UserVO currentUser, Long targetUserId, List<String> reasons) {
+        UserStatus status = UserStatus.DEACTIVATED;
+        RequestedAndTargetUsersPair users = isOperationAllowed(currentUser, targetUserId, status);
+        User targetUser = users.targetUser();
+
+        reasons.forEach(reason -> saveDeactivationReason(targetUser, reason));
+        sendDeactivationNotification(targetUser, reasons.getLast());
+        targetUser.setStatus(status);
+        userRepo.save(targetUser);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public List<String> getDeactivationReasons(Long id, UserVO currentUser) {
+        Optional<UserDeactivationReason> deactivationReason = userDeactivationRepo.getLastDeactivationReason(id);
+        if (deactivationReason.isEmpty()) {
+            throw new NotFoundException(ErrorMessage.USER_DEACTIVATION_REASON_IS_EMPTY);
+        }
+
+        String userLang = userRemoteClient.findUserLanguageByEmail(currentUser.getEmail());
+        if (userLang.equals("uk")) {
+            userLang = "uk";
+        }
+        return filterReasons(userLang, deactivationReason.get().getReason());
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public long getActivatedUsersAmount() {
+        return userRepo.countAllByStatus(UserStatus.ACTIVATED);
+    }
+
+    private UserFilterDto createUserFilterDto(String criteria, String role, String status) {
+        if (status != null) {
+            status = status.equals("all") ? null : status;
+        }
+        if (role != null) {
+            role = role.equals("all") ? null : role;
+        }
+        return new UserFilterDto(criteria, role, status);
     }
 
     private boolean shouldSkipLocationUpdate(User user, UserProfileDtoRequest userProfileDtoRequest) {
@@ -477,118 +803,87 @@ public class UserServiceImpl implements UserService {
         int totalPages = userManagementVOs.getTotalPages();
         int startPage = Math.max(0, currentPage - 3);
         int endPage = Math.min(currentPage + 3, totalPages - 1);
-        List<Integer> pageNumbers = IntStream.rangeClosed(startPage, endPage).boxed().collect(Collectors.toList());
+        List<Integer> pageNumbers = IntStream
+            .rangeClosed(startPage, endPage)
+            .boxed()
+            .toList();
 
         return new PageInfoDto(currentPage, totalPages, pageNumbers);
     }
 
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public UserVOAdvancedDto findByIdAdvanced(Long id) {
-        return userRepo.findById(id)
-            .map(user -> modelMapper.map(user, UserVOAdvancedDto.class))
-            .orElseThrow(() -> new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + id));
+    private UserSpecification buildSpecification(UserFilterDto userFilterDto) {
+        List<SearchCriteria> searchCriteriaList = new ArrayList<>();
+        setValueIfNotEmpty(searchCriteriaList, "query", userFilterDto.getQuery());
+        setValueIfNotEmpty(searchCriteriaList, "status", userFilterDto.getStatus());
+
+        return new UserSpecification(searchCriteriaList);
     }
 
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public String getSocialNetworkUrlByName(List<SocialNetworkVO> socialNetworks, String socialNetworkName) {
-        return socialNetworks.stream()
-            .map(SocialNetworkVO::getUrl)
-            .filter(url -> url.contains(socialNetworkName))
-            .findFirst()
-            .orElse(null);
+    private void setValueIfNotEmpty(List<SearchCriteria> searchCriteria, String key, String value) {
+        if (StringUtils.hasText(value)) {
+            searchCriteria.add(SearchCriteria.builder()
+                .key(key)
+                .type(key)
+                .value(value)
+                .build());
+        }
     }
 
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public Boolean createUser(CreateGreenCityUserDto createUserDto) {
-        Long newUserId = createUserDto.getId();
-        if (userRepo.existsById(newUserId)) {
-            throw new UserAlreadyExistsException(HttpStatus.CONFLICT,
-                ErrorMessage.USER_ALREADY_REGISTERED_WITH_THIS_ID.formatted(newUserId));
+    private List<String> filterReasons(String lang, String reasons) {
+        List<String> result = null;
+        List<String> forAll = List.of(reasons.split("/"));
+        if (lang.equals("en")) {
+            result = forAll.stream().filter(s -> s.contains("{en}"))
+                .map(filterEn -> filterEn.replace("{en}", "").trim()).toList();
         }
-        String newUserEmail = createUserDto.getEmail();
-        if (userRepo.existsByEmail(newUserEmail)) {
-            throw new UserAlreadyExistsException(HttpStatus.CONFLICT,
-                ErrorMessage.USER_ALREADY_REGISTERED_WITH_THIS_EMAIL.formatted(newUserEmail));
+        if (lang.equals("uk")) {
+            result = forAll.stream().filter(s -> s.contains("{uk}"))
+                .map(filterEn -> filterEn.replace("{uk}", "").trim()).toList();
+        }
+        return result;
+    }
+
+    private RequestedAndTargetUsersPair isOperationAllowed(UserVO currentUser, Long targetUserId, UserStatus status) {
+        UserVO currentUserDto = userRemoteClient.findByEmail(currentUser.getEmail())
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + currentUser.getEmail()));
+        if (currentUserDto.getId().equals(targetUserId)) {
+            throw new UserStatusUpdateException(ErrorMessage.USER_CANNOT_DEACTIVATE_YOURSELF);
         }
 
-        User userToSave = User.builder()
-            .id(newUserId)
-            .name(createUserDto.getName())
-            .email(newUserEmail)
-            .profilePicturePath(createUserDto.getProfilePicturePath())
-            .rating(AppConstant.DEFAULT_RATING)
-            .eventOrganizerRating(AppConstant.DEFAULT_RATING)
+        User targetUser = userRepo.findById(targetUserId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_ID + targetUserId));
+        UserVO targetUserDto = userRemoteClient.findByEmail(targetUser.getEmail())
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + targetUser.getEmail()));
+        if (status.equals(UserStatus.DEACTIVATED) && targetUserDto.getRole().equals(Role.ROLE_ADMIN)) {
+            throw new UserStatusUpdateException(ErrorMessage.ADMIN_CANNOT_DEACTIVATE_OTHER_ADMIN);
+        }
+
+        return new RequestedAndTargetUsersPair(currentUserDto, targetUser, targetUserDto);
+    }
+
+    private void saveDeactivationReason(User targetUser, String reason) {
+        userDeactivationRepo.save(UserDeactivationReason.builder()
+            .dateTimeOfDeactivation(LocalDateTime.now())
+            .reason(reason)
+            .user(targetUser)
+            .build());
+    }
+
+    private void sendDeactivationNotification(User targetUser, String reason) {
+        String lang = userRemoteClient.findUserLanguageByEmail(targetUser.getEmail());
+        UserDeactivationReasonDto notification = UserDeactivationReasonDto.builder()
+            .deactivationReason(reason)
+            .email(targetUser.getEmail())
+            .name(targetUser.getName())
+            .lang(lang)
             .build();
-        userRepo.save(userToSave);
-        return true;
+        userRemoteClient.sendReasonOfDeactivation(notification);
     }
 
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public void updateUserProfilePicture(Long userId, String profilePicturePath) {
-        int updatedRows = userRepo.updateUserProfilePictureByUserId(userId, profilePicturePath);
-        if (updatedRows == 0) {
-            throw new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
-        }
+    private String createDeactivationReason(UserVO currentUserDto) {
+        return String.format("Deactivated by %s[%s] admin.", currentUserDto.getName(), currentUserDto.getEmail());
     }
 
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public void updateUserName(Long userId, String userName) {
-        int updatedRows = userRepo.updateUserName(userId, userName);
-        if (updatedRows == 0) {
-            throw new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
-        }
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public List<GreenCityUserProfileDtoResponse> findGreenCityUserProfilesByUserIds(List<Long> userIds) {
-        var greenCityProfiles = userRepo.findGreenCityUserProfilesByUserIds(userIds);
-
-        int expectedSize = userIds.size();
-        int resultSize = greenCityProfiles.size();
-
-        if (resultSize < expectedSize) {
-            List<Long> resultIds = greenCityProfiles.stream()
-                .map(GreenCityUserProfileDtoResponse::getUserId)
-                .toList();
-            List<Long> notFoundIds = userIds.stream()
-                .filter(userId -> !resultIds.contains(userId))
-                .toList();
-            String notFoundIdsStr = notFoundIds.stream().map(String::valueOf).collect(Collectors.joining(", "));
-            throw new NotFoundException(ErrorMessage.USERS_NOT_FOUND_BY_IDS + notFoundIdsStr);
-        }
-
-        greenCityProfiles.forEach(greenCityProfile -> userLocationRepo.findAllUsersCities(greenCityProfile.getUserId())
-            .ifPresent(userLocation -> {
-                UserLocationDto userLocationDto = modelMapper.map(userLocation, UserLocationDto.class);
-                greenCityProfile.setUserLocationDto(userLocationDto);
-            }));
-        return greenCityProfiles;
-    }
-
-    private <T> T findUserLocation(Long userId, Class<T> clazz) {
-        if (!userRepo.existsById(userId)) {
-            throw new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
-        }
-        UserLocation userLocation = userLocationRepo.findAllUsersCities(userId)
-            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_DID_NOT_SET_ANY_CITY));
-        return modelMapper.map(userLocation, clazz);
+    private record RequestedAndTargetUsersPair(UserVO currentUserDto, User targetUser, UserVO targetUserDto) {
     }
 }
